--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Course Store</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+      </style>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
+        </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
